sorting/MergeSort/MergeSort/x64/Debug/MergeSort.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\x64\Debug\kernel.cu.obj "C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\kernel.cu" 
C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\kernel.cu(30): error : kernel launch from __device__ or __global__ functions requires separate compilation mode
            quicksort << <1, 1 >> > (arr, low, pi - 1);
            ^
  
C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\kernel.cu(31): error : kernel launch from __device__ or __global__ functions requires separate compilation mode
            quicksort << <1, 1 >> > (arr, pi + 1, high);
            ^
  
  2 errors detected in the compilation of "C:/Users/PC/Desktop/paralelno1/paralelno/zadaci/MergeSort/MergeSort/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.3.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\x64\Debug\kernel.cu.obj "C:\Users\PC\Desktop\paralelno1\paralelno\zadaci\MergeSort\MergeSort\kernel.cu"" exited with code 1.
